fix work index title wrapping

--- a/site/css/screen.scss
+++ b/site/css/screen.scss
@@ -105,10 +105,20 @@ div.solution-features {
 li.bio-item,
 li.services-item,
 li.work-item {
+    margin-bottom: gutter(8);
+}
+
+li.bio-item,
+li.services-item {
     @media (min-width: 48em) {
         @include gallery(4);
     }
-    margin-bottom: gutter(8);
+}
+
+li.work-item {
+    @media (min-width: 56em) {
+        @include gallery(4);
+    }
 }
 
 li.bio-item,
